<resources>
    <string name="app_name">Library System</string>
    <string name="nav_bar_home">Home</string>
    <string name="search_book_hint">enter something</string>
    <string name="open_nav_bar" translatable="false">Open Navigation Bar</string>
    <string name="permission_rationale" translatable="false">permission_rationale</string>
    <string name="close_nav_bar" translatable="false">Close Navigation Bar</string>
    <string name="backend_url" translatable="false">https://backendapi.sloli.xyz</string>
    <string name="nav_bar_branches">Branches</string>
    <string name="uploadbook_bookname">Book Name</string>
    <string name="uploadbook_authorname">Author Name</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="tv_username">Username</string>
    <string name="tv_password">Password</string>
    <string name="nav_bar_uploadbook">Upload new book</string>
    <string name="nav_bar_shakebook">Shake a book</string>
    <string name="btn_add_appointment">Make Appointment</string>
    <string name="btn_view_detail">View Detail</string>
    <string name="nav_bar_mybooks">My Appointment</string>
    <string name="upload">Upload</string>
    <string name="uploadbook_ISBN">ISBN</string>
    <string name="loading">Loading...</string>
    <string name="alert_not_manager">You are not manager</string>
    <string name="nav_bar_log_out">Log out</string>
    <string name="alert_empty_title">Please enter the book title</string>
    <string name="alert_empty_author">Please enter the book author</string>
    <string name="alert_empty_isbn">Please enter the book ISBN</string>
    <string name="map_show_route">Show direction</string>
    <string name="book_detail_title_lable">Title:</string>
    <string name="book_detail_author_lable">Author:</string>
    <string name="book_detail_bookid_lable">Book ID:</string>
    <string name="book_detail_isbn_lable">ISBN:</string>
    <string name="alert_please_collect">Please collect the book before:</string>
    <string name="shakebook_notice">Please shake phone to get random book</string>
</resources>
